--- a/mammifere.html
+++ b/mammifere.html
@@ -6,17 +6,17 @@
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
 		<!-- intégration fichier css -->
 		<link rel="stylesheet" href="assets/css/main2.css" />
-		<link rel="stylesheet" href="leaflet/feature-legend.css"  />
 		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" /> -->
 		<link rel="stylesheet" href="leaflet/leaflet.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
-	
+		<link rel="stylesheet" href="leaflet/feature-legend.css"  />
 		
 		<!-- intégration fichier JS -->
-		<script type="text/javascript" src="leaflet/leaflet.js"> </script>
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script> -->
+		<!-- <script type="text/javascript" src="leaflet/leaflet.js"> </script> -->
 		<!-- <script type="text/javascript" src="leaflet/fonction_choropleth.js" > </script> -->
+		<!-- <script type="text/javascript" src="leaflet/MarkerClusterGroup.js" > </script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
 		<script type="text/javascript" src="leaflet/feature-legend.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/leaflet.markercluster.js"></script>
 
