--- a/mammifere.html
+++ b/mammifere.html
@@ -23,9 +23,9 @@
 
 	</head>
 	<body>
-        	<section id="header">
+        	<!-- <section id="header">
 				<header>
-					 <!-- <span class="image avatar"><img src="images/logo_lpo.png" alt="" /></span>  -->
+					<span class="image avatar"><img src="images/logo_lpo.png" alt="" /></span>  
 					<h1 id="logo">Projet VRA</h1>
 					<p>	<ul>Réalisé.e.s par :
 						<li>LPO Auvergne Rhône Alpes</li>
@@ -33,7 +33,7 @@
 					<div id='info'> </div>
 				</header>
 
-			</section>
+			</section> -->
 			<div id="wrapper">
 				<!-- Main -->
 					<div id="main">					
