--- a/papillon.html
+++ b/papillon.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="leaflet/leaflet.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
+		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	
 		
 		<!-- intégration fichier JS -->
@@ -31,6 +32,40 @@
 						<li>LPO Auvergne Rhône Alpes</li>
 					</ul></p>
 					<div id='info'> </div>
+					<br><br>
+					<div class="bd-example">
+						<table class="table table-hover">
+						  <thead>
+							<tr class="table-dark">
+								<th scope="row">Espèces</th>
+								<th scope="row">Dernière observation</th>
+								<th scope="row">Statut</th>
+							  </tr>
+						  </thead>
+						  <tbody>
+							
+						  <tr class="table-primary">
+							<th scope="row">Aurore</th>
+							<td>2020</td>
+							<td>LC</td>
+						  </tr>
+
+						  <tr class="table-light">
+							<th scope="row">Mégère</th>
+							<td>2021</td>
+							<td>LC</td>
+						  </tr>
+
+		
+						 <!-- <tr class="table-danger">
+							<th scope="row">Danger</th>
+							<td>Cell</td>
+							<td>Cell</td>
+						  </tr> -->
+
+						  </tbody>
+						</table>
+						</div>
 				</header>
 
 			</section>
